--- a/tests/Makefile
+++ b/tests/Makefile
@@ -20,7 +20,7 @@ testIntervals: generate
 	cd ..; python -m coverage run -a schedulers/intervalContainer.py
 
 %/out_jobs.csv:
-	cd ..; python launch_expe.py tests/$*/expe.json || (rm -f $@; exit 1)
+	cd ..; python launch_expe.py --quiet tests/$*/expe.json || (rm -f $@; exit 1)
 
 gantts: $(GANTTS_OUT)
 
