[setup] make changes to allow running on non-Arch systems

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,3 +1,4 @@
+SHELL := /bin/bash
 
 EXPE_FOLDERS := $(wildcard tests/*)
 SIMULS_OUT := $(patsubst %,%/out_jobs.csv,$(EXPE_FOLDERS))
@@ -14,13 +15,13 @@ simuls: testIntervals $(SIMULS_OUT) coverage_html
 	fi
 
 coverage_html: ../.coverage
-	cd ..; coverage html -d tests/coverage_html
+	cd ..; coverage html -i -d tests/coverage_html
 
 testIntervals: generate
-	cd ..; python -m coverage run -a schedulers/intervalContainer.py
+	cd ..; python3 -m coverage run -a schedulers/intervalContainer.py
 
 %/out_jobs.csv:
-	cd ..; python launch_expe.py --quiet tests/$*/expe.json || (rm -f $@; exit 1)
+	cd ..; python3 launch_expe.py --quiet tests/$*/expe.json || (rm -f $@; exit 1)
 
 gantts: $(GANTTS_OUT)
 
@@ -28,11 +29,11 @@ gantts_okular: $(GANTTS_OUT)
 	okular $^
 
 %/gantt.png: %/out_jobs.csv
-	python ../../../../evalys/evalys/gantt.py $* $*/gantt.png
+	python3 ../../../../evalys/evalys/gantt.py $* $*/gantt.png
 
 generate:
-	python generate.py
+	python3 generate.py
 
 clean:
 	rm tests/*/out_jobs.csv
-	cd ..; python -m coverage erase
+	cd ..; python3 -m coverage erase
